--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+isort==4.3.0
 py==1.4.34                # via pytest
 pytest==3.1.2
+simanneal==0.4.1
 unidecode==0.4.20
